--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "type-check": "vue-tsc --build --force"
   },
   "dependencies": {
+    "@vueuse/core": "^10.11.0",
     "firebase": "^10.12.3",
     "pinia": "^2.1.7",
     "sass": "^1.77.8",
